--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+app.jwt.secret=SomeJWTSecret
+app.jwt.header-token-name=Authorization
+app.jwt.header-token-word=Bearer
