Правки ошибок регистрации и входа;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.datasource.url=jdbc:mysql://192.168.171.1:3306/db?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=password
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 app.jwt.secret=SomeJWTSecret
 app.jwt.header-token-name=Authorization
